--- a/trunk/src/timeline_analysis_test.html
+++ b/trunk/src/timeline_analysis_test.html
@@ -225,19 +225,23 @@ base.defineModule('timeline_analysis_test')
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
       assertEquals('Slices:', table.tableHeader);
-      assertEquals(4, table.rows.length)
+      assertEquals(6, table.rows.length)
 
-      assertEquals("*Totals", table.rows[0].label);
-      assertEquals(2, table.rows[0].occurences);
-      assertAlmostEquals(0.1, table.rows[0].duration);
+      assertEquals("a", table.rows[0].label);
+      assertEquals(1, table.rows[0].occurences);
+      assertAlmostEquals(0.04, table.rows[0].duration);
+      assertEquals("aa", table.rows[1].label);
+      assertEquals(1, table.rows[1].occurences);
+      assertAlmostEquals(0.06, table.rows[1].duration);
+      assertEquals("*Totals", table.rows[2].label);
+      assertEquals(2, table.rows[2].occurences);
+      assertAlmostEquals(0.1, table.rows[2].duration);
 
-      assertEquals(true, table.rows[1].spacing);
-
-      assertEquals("Selection start", table.rows[2].label);
-      assertAlmostEquals(0, table.rows[2].time);
+      assertEquals("Selection start", table.rows[4].label);
+      assertAlmostEquals(0, table.rows[4].time);
       
-      assertEquals("Selection extent", table.rows[3].label);
-      assertAlmostEquals(0.18, table.rows[3].time);
+      assertEquals("Selection extent", table.rows[5].label);
+      assertAlmostEquals(0.18, table.rows[5].time);
     }
 
     tests.testAnalyzeSelectionWithTwoSlicesSameTitle = function() {
