Add a barebones test for ui.js
Review URL: https://codereview.appspot.com/6331058

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -19,6 +19,7 @@ found in the LICENSE file.
     'timeline_test.html',
     'timeline_view_test.html',
     'timeline_analysis_test.html',
+    'ui_test.html',
   ];
 </script>
 <style>
