Fix sched_switch parsing with prev_state D|W.
Extend the regex to handle the special case of prev_state "D|W".

BUG=none
TEST=new unit test + previously collected data that generated import errors

Change-Id: I0e97ec0f7616d8b942d9fa30359429b2357125b5

Review URL: https://codereview.appspot.com/6329063

--- a/trunk/src/linux_perf_importer_test.html
+++ b/trunk/src/linux_perf_importer_test.html
@@ -85,6 +85,13 @@ tests.testSchedSwitchRE = function() {
   assertNotNull(x);
   assertEquals('Binder Thread #', x[1]);
   assertEquals('.android.chrome', x[5]);
+
+  // explict test for prev_state of D|W
+  var x = re.exec('prev_comm=.android.chrome prev_pid=1562 prev_prio=120 ' +
+      'prev_state=D|W ==> next_comm=Binder Thread # next_pid=195 ' +
+      'next_prio=120');
+  assertNotNull(x);
+  assertEquals('D|W', x[4]);
 }
 
 tests.testSchedWakeupRE = function() {
