A bunch of unit tests had the wrong module definitions. Fix them.
TBR=jbates@chromium.org

Review URL: https://codereview.appspot.com/6356056

--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -23,7 +23,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-base.defineModule('timeline_test')
+base.defineModule('timeline_model_test')
     .dependsOn('unittest',
                'test_utils',
                'timeline_view')
