--- a/trunk/src/timeline_track_test.html
+++ b/trunk/src/timeline_track_test.html
@@ -17,7 +17,7 @@ found in the LICENSE file.
 <body>
 <script>
   'use strict';
-  base.defineModule('timeline_test')
+  base.defineModule('timeline_track_test')
       .dependsOn('unittest',
                  'test_utils',
                  'timeline' /* TODO(nduca): reduce dependency to tracks */)
