--- a/trunk/src/unittest_test.html
+++ b/trunk/src/unittest_test.html
@@ -14,7 +14,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-base.defineModule('linux_perf_importer_test')
+base.defineModule('unittest_test')
     .dependsOn('unittest',
                'test_utils',
                'linux_perf_importer',
