--- a/trunk/src/profiling_view_test.html
+++ b/trunk/src/profiling_view_test.html
@@ -18,7 +18,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-base.defineModule('timeline_test')
+base.defineModule('profiling_view_test')
     .dependsOn('unittest',
                'test_utils',
                'profiling_view')
