--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -24,7 +24,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-base.defineModule('timeline_test')
+base.defineModule('timeline_view_test')
     .dependsOn('unittest',
                'test_utils',
                'timeline_view')
