Keep DragHandle from moving when the analysis view is overflow scrolled
BUG=53
TEST=

Review URL: https://codereview.appspot.com/6346047

--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -109,6 +109,10 @@ base.defineModule('timeline_view_test')
       view.tabIndex = 0;
       view.focusElement = view;
 
+      var selection = new tracing.TimelineSelection();
+      view.timeline.addAllObjectsMatchingFilterToSelection({matchSlice: function(){return true;}}, selection);
+      view.timeline.selection = selection;
+
       document.body.appendChild(view);
     }
 
