Break timeline_module.js into multiple files

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -11,6 +11,11 @@ found in the LICENSE file.
   tests = [
     'unittest_test.html',
     'overlay_test.html',
+    'timeline_async_slice_group_test.html',
+    'timeline_thread_test.html',
+    'timeline_process_test.html',
+    'timeline_counter_test.html',
+    'timeline_cpu_test.html',
     'timeline_model_test.html',
     'timeline_track_test.html',
     'linux_perf_importer_test.html',
