--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -12,6 +12,7 @@ found in the LICENSE file.
     'unittest_test.html',
     'overlay_test.html',
     'timeline_async_slice_group_test.html',
+    'timeline_slice_group_test.html',
     'timeline_thread_test.html',
     'timeline_process_test.html',
     'timeline_counter_test.html',
