--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -34,13 +34,13 @@ base.defineModule('timeline_test')
         {name: 'b', args: {}, pid: 52, ts: 629, cat: 'foo', tid: 53, ph: 'B'},
         {name: 'b', args: {}, pid: 52, ts: 631, cat: 'foo', tid: 53, ph: 'E'}
       ];
-      var model = new tracing.TimelineModel();
-      model.importEvents(events);
+      var model = new tracing.TimelineModel(events);
       var timeline = new tracing.Timeline();
       timeline.model = model;
       timeline.focusElement = timeline;
       timeline.tabIndex = 0;
-      document.body.appendChild(timeline);
+      var outputEl = this.addHTMLOutput();
+      outputEl.appendChild(timeline);
     }
 
     tests.testAddAllObjectsMatchingFilterToSelection = function() {
@@ -48,8 +48,8 @@ base.defineModule('timeline_test')
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
 
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('b', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('b', 0, 1.1, {}, 2.8));
 
       var t1asg = t1.asyncSlices;
       t1asg.slices.push(test_utils.newAsyncSliceNamed('a', 0, 1, t1, t1));
@@ -60,7 +60,7 @@ base.defineModule('timeline_test')
       timeline.model = model;
 
       var expected = [{slice: t1asg.slices[0].subSlices[0]},
-                      {slice: t1.subRows[0][0]}];
+                      {slice: t1.slices[0]}];
       var result = new tracing.TimelineSelection();
       timeline.addAllObjectsMatchingFilterToSelection(new tracing.TimelineFilter('a'), result);
       assertEquals(2, result.length);
@@ -68,7 +68,7 @@ base.defineModule('timeline_test')
       assertEquals(expected[1].slice, result[1].slice);
 
       var expected = [{slice: t1asg.slices[1].subSlices[0]},
-                      {slice: t1.subRows[0][1]}];
+                      {slice: t1.slices[1]}];
       var result = new tracing.TimelineSelection();
       timeline.addAllObjectsMatchingFilterToSelection(new tracing.TimelineFilter('b'), result);
       assertEquals(2, result.length);
@@ -80,20 +80,20 @@ base.defineModule('timeline_test')
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 5, {}, 1));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 5, {}, 1));
 
       var sel = new tracing.TimelineSelection();
-      sel.addSlice({}, t1.subRows[0][0]);
+      sel.addSlice({}, t1.slices[0]);
 
       assertEquals(1, sel.range.min);
       assertEquals(4, sel.range.max);
-      assertEquals(t1.subRows[0][0], sel[0].slice);
+      assertEquals(t1.slices[0], sel[0].slice);
 
-      sel.addSlice({}, t1.subRows[0][1]);
+      sel.addSlice({}, t1.slices[1]);
       assertEquals(1, sel.range.min);
       assertEquals(6, sel.range.max);
-      assertEquals(t1.subRows[0][1], sel[1].slice);
+      assertEquals(t1.slices[1], sel[1].slice);
 
       sel.clear();
       assertEquals(0, sel.length);
@@ -103,8 +103,8 @@ base.defineModule('timeline_test')
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 5, {}, 1));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 5, {}, 1));
 
       var track = new tracing.TimelineSliceTrack();
       track.slices = t1.subRows[0];
