--- a/trunk/src/timeline_thread_test.html
+++ b/trunk/src/timeline_thread_test.html
@@ -39,7 +39,7 @@ base.defineModule('timeline_thread_test')
 
   tests.testThreadBounds_SubRow = function() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
-    t.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
+    t.pushSlice(new TimelineThreadSlice('a', 0, 1, {}, 3));
     t.updateBounds();
     assertEquals(1, t.minTimestamp);
     assertEquals(4, t.maxTimestamp);
@@ -47,7 +47,7 @@ base.defineModule('timeline_thread_test')
 
   tests.testThreadBounds_AsyncSliceGroup = function() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
-    t.subRows[0].push(new TimelineThreadSlice('a', 0, 1, {}, 3));
+    t.pushSlice(new TimelineThreadSlice('a', 0, 1, {}, 3));
     t.asyncSlices.push(newAsyncSlice(0.1, 5, t, t));
     t.updateBounds();
     assertEquals(0.1, t.minTimestamp);
