--- a/trunk/src/timeline_track_test.html
+++ b/trunk/src/timeline_track_test.html
@@ -50,17 +50,8 @@ found in the LICENSE file.
     return s;
   }
 
-  function getTestDiv(name) {
-    if (!testDivs[name]) {
-      testDivs[name] = document.createElement('div');
-      document.body.appendChild(testDivs[name]);
-    }
-    testDivs[name].textContent = '';
-    return testDivs[name];
-  }
-
   tests.testBasicSlices = function() {
-    var testEl = getTestDiv('testBasicSlices');
+    var testEl = this.addHTMLOutput();
     var track = TimelineSliceTrack();
     testEl.appendChild(track);
     track.heading = 'testBasicSlices';
@@ -92,7 +83,7 @@ found in the LICENSE file.
   }
 
   tests.testShrinkingSliceSizes = function() {
-    var testEl = getTestDiv('testShrinkingSliceSizes');
+    var testEl = this.addHTMLOutput();
     var track = TimelineSliceTrack();
     testEl.appendChild(track);
     track.heading = 'testShrinkingSliceSizes';
@@ -110,7 +101,7 @@ found in the LICENSE file.
   }
 
   tests.testSelectionHitTesting = function() {
-    var testEl = getTestDiv('testSelectionHitTesting');
+    var testEl = this.addHTMLOutput();
     var track = new TimelineSliceTrack();
     testEl.appendChild(track);
     track.heading = 'testSelectionHitTesting';
@@ -145,10 +136,10 @@ found in the LICENSE file.
     var model = new tracing.TimelineModel();
     var p1 = model.getOrCreateProcess(1);
     var t1 = p1.getOrCreateThread(1);
-    t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 1, {}, 5));
-    t1.subRows[0].push(new tracing.TimelineThreadSlice('b', 0, 5.1, {}, 4));
+    t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 4));
+    t1.pushSlice(new tracing.TimelineThreadSlice('b', 0, 5.1, {}, 4));
 
-    var testEl = getTestDiv('testSelectionHitTestingWithTimelineThreadTrack');
+    var testEl = this.addHTMLOutput();
     var track = new tracing.TimelineThreadTrack();
     testEl.appendChild(track);
     track.heading = 'testSelectionHitTestingWithTimelineThreadTrack';
@@ -170,7 +161,7 @@ found in the LICENSE file.
   }
 
   tests.testBasicCpu = function() {
-    var testEl = getTestDiv('testBasicCpu');
+    var testEl = this.addHTMLOutput();
 
     var cpu = new TimelineCpu(7);
     cpu.slices = [
@@ -188,7 +179,7 @@ found in the LICENSE file.
   }
 
   tests.testViewport = function() {
-    var testEl = getTestDiv('testViewport');
+    var testEl = this.addHTMLOutput();
 
     var track = tracing.TimelineViewportTrack();
     testEl.appendChild(track);
@@ -198,7 +189,7 @@ found in the LICENSE file.
   }
 
   tests.testBasicCounter = function() {
-    var testEl = getTestDiv('testBasicCounter');
+    var testEl = this.addHTMLOutput();
 
     var ctr = new TimelineCounter(undefined,
                                   'testBasicCounter', 'testBasicCounter');
@@ -295,7 +286,7 @@ found in the LICENSE file.
                     { trackName: 'elideOn', elide: true }];
     for (var dictIndex in optDicts) {
       var dict = optDicts[dictIndex];
-      var testEl = getTestDiv(dict.trackName);
+      var testEl = this.addHTMLOutput(dict.trackName);
       var track = new TimelineSliceTrack();
       if (dict.elide) {
         track.SHOULD_ELIDE_TEXT = true;
@@ -320,7 +311,7 @@ found in the LICENSE file.
   }
 
   tests.testElide = function() {
-    var testEl = getTestDiv('testElide');
+    var testEl = this.addHTMLOutput();
     var track = new TimelineSliceTrack();
     testEl.appendChild(track);
     var bigtitle = 'Super duper long long title ' +
@@ -368,23 +359,19 @@ found in the LICENSE file.
   }
 
   tests.testTimelineThreadTrackWithRegularSlices = function() {
-    var testEl = getTestDiv('testTimelineThreadTrackWithRegularSlices');
+    var testEl = this.addHTMLOutput();
     var track = TimelineThreadTrack();
     testEl.appendChild(track);
     track.heading = 'testTimelineThreadTrackWithRegularSlices';
     var thread = new TimelineThread(new TimelineProcess(7), 1);
-    thread.subRows = [
-      [
+    thread.pushSlices([
         new TimelineThreadSlice('a', 0, 1, {}, 1),
         new TimelineThreadSlice('b', 1, 2.1, {}, 4.8),
         new TimelineThreadSlice('b', 1, 7, {}, 0.5),
-        new TimelineThreadSlice('c', 2, 7.6, {}, 0.4)
-      ],
-      [
+        new TimelineThreadSlice('c', 2, 7.6, {}, 0.4),
         new TimelineThreadSlice('d', 3, 1.1, {}, 0.8),
         new TimelineThreadSlice('e', 4, 7.1, {}, 0.3)
-      ]
-    ];
+    ]);
     thread.updateBounds();
     track.heading = 'thread regular';
     track.headingWidth = '150px';
@@ -395,20 +382,20 @@ found in the LICENSE file.
   }
 
   tests.testTimelineThreadTrackWithTallSlices = function() {
-    var testEl = getTestDiv('testTimelineThreadTrackWithTallSlices');
+    var testEl = this.addHTMLOutput();
     var track = TimelineThreadTrack();
     testEl.appendChild(track);
     track.heading = 'testTimelineThreadTrackWithTallSlices';
     var thread = new TimelineThread(new TimelineProcess(7), 1);
-    thread.subRows = [
-      [new TimelineThreadSlice('a', 1, 0, {}, 1)],
-      [new TimelineThreadSlice('b', 2, 0.1, {}, 0.8)],
-      [new TimelineThreadSlice('c', 3, 0.15, {}, 0.70)],
-      [new TimelineThreadSlice('d', 4, 0.20, {}, 0.50)],
-      [new TimelineThreadSlice('e', 5, 0.30, {}, 0.28)],
-      [new TimelineThreadSlice('e', 6, 0.35, {}, 0.20)],
-      [new TimelineThreadSlice('f', 7, 0.40, {}, 0.10)]
-    ];
+    thread.pushSlices([
+      new TimelineThreadSlice('a', 1, 0, {}, 1),
+      new TimelineThreadSlice('b', 2, 0.1, {}, 0.8),
+      new TimelineThreadSlice('c', 3, 0.15, {}, 0.70),
+      new TimelineThreadSlice('d', 4, 0.20, {}, 0.50),
+      new TimelineThreadSlice('e', 5, 0.30, {}, 0.28),
+      new TimelineThreadSlice('e', 6, 0.35, {}, 0.20),
+      new TimelineThreadSlice('f', 7, 0.40, {}, 0.10)
+    ]);
     thread.updateBounds();
     track.heading = 'thread tall';
     track.headingWidth = '150px';
@@ -419,22 +406,18 @@ found in the LICENSE file.
   }
 
   tests.testTimelineThreadTrackWithRegularAndAsyncSlices = function() {
-    var testEl = getTestDiv('testTimelineThreadTrackWithAsyncSlices');
+    var testEl = this.addHTMLOutput();
     var track = TimelineThreadTrack();
     testEl.appendChild(track);
     var thread = new TimelineThread(new TimelineProcess(7), 1);
-    thread.subRows = [
-      [
+    thread.pushSlices([
         new TimelineThreadSlice('a', 0, 1, {}, 1),
         new TimelineThreadSlice('b', 1, 2.1, {}, 4.8),
         new TimelineThreadSlice('b', 1, 7, {}, 0.5),
-        new TimelineThreadSlice('c', 2, 7.6, {}, 0.4)
-      ],
-      [
+        new TimelineThreadSlice('c', 2, 7.6, {}, 0.4),
         new TimelineThreadSlice('d', 3, 1.1, {}, 0.8),
         new TimelineThreadSlice('e', 4, 7.1, {}, 0.3)
-      ]
-    ];
+    ]);
     thread.asyncSlices.push(newAsyncSlice(1.2, 7.2 - 1.2, thread, thread));
     thread.asyncSlices.push(newAsyncSlice(1.3, 7.3 - 1.3, thread, thread));
     thread.updateBounds();
