--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -101,8 +101,7 @@ base.defineModule('timeline_view_test')
       // Add a known problematic piece of data to test the import errors UI.
       events.push({ph: 'Z'});
 
-      var model = new tracing.TimelineModel();
-      model.importEvents(events);
+      var model = new tracing.TimelineModel(events);
       var view = new tracing.TimelineView();
       view.style.height = '400px';
       view.model = model;
@@ -231,7 +230,7 @@ base.defineModule('timeline_view_test')
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.subRows[0].push(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('a', 0, 1, {}, 3));
 
       var timeline = new tracing.Timeline();
       timeline.model = model;
